syntax = "proto3";
package pdytr.ejercicio3;

option java_multiple_files = true;
option java_outer_classname = "ChatServiceOuterClass";

service ChatService {
  rpc Connect(ClientInfo) returns (ServerResponse);
  rpc Disconnect(ClientInfo) returns (ServerResponse);
  rpc SendMessage(stream Message) returns (stream Message);
}

message ClientInfo {
  string name = 1;
}

message Message {
  string name = 1;
  string content = 2;
  string timestamp = 3;
}

message ServerResponse {
  string message = 1;
}
